# creator

./: .editorconfig  .gitignore  README.md  default.nix  flake.nix  pyproject.toml  shell.nix
creator/: command.py  config.py  main.py  setting.py  util.py
creator/modules/: astro.py  python.py  rust.py  sveltekit.py  vite.py
creator/runners/: default.py  nix.py
