[tool.poetry]
name = "creator"
version = "0.1.0"
description = "CLI tool to scaffold projects."
authors = ["jaanonim <mat8mro@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
creator = "creator.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
questionary = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
